
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {unsigned long s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int saddr ;
struct TYPE_4__ {scalar_t__* h_addr_list; } ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int SOCK_STREAM ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 TYPE_2__* hostSct ;
 int htons (int) ;
 int memset (void*,int ,int) ;
 int socket (int ,int ,int ) ;

int connect_to_host(int port)
{
 int sockt;
 struct sockaddr_in saddr;

 if((sockt=socket(AF_INET,SOCK_STREAM,IPPROTO_TCP))==-1)
  return -1;
 memset((void *)&saddr, 0, sizeof(struct sockaddr_in));
 saddr.sin_family=AF_INET;
 saddr.sin_addr.s_addr=*((unsigned long *)hostSct->h_addr_list[0]);
 saddr.sin_port=htons(port);
 if(connect(sockt, (struct sockaddr *)&saddr, sizeof(saddr))<0) {
  close(sockt);
  return -1;
 } else
 return sockt;
}
